# rust_ollama_xp

./: .gitignore  Cargo.toml  README.md
examples/: c01-simple.rs  c02-context.rs  c03-chat.rs  c04-embeddings.rs  c05-aktionen_spawner.rs
src/: lib.rs
