[package]
name = "xp-ollama"
version = "0.1.0"
edition = "2021"

# development settings
[lint.rust]
unsafe_code = "forbid"
unused = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# -- Ollama
ollama-rs = { version = "0.1", features = ["stream"] }
# -- Database
surrealdb = "1.3.1"
# -- Files
simple-fs = { version = "0.1", features = ["full"] }
# -- Others
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
serde_json = "1.0.114"
